# Uni-Chat

./: .gitignore  README.md  SETUP.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start_server.py
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/routers/: auth.py  chat.py  users.py
backend/app/services/: langchain_service.py  validation_service.py
backend/app/tests/: test_ws_stream.py
backend/app/utils/: timer.py
docs/: blueprint.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/ai/: dev.ts
frontend/src/ai/flows/: configure-llm-flow.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthPage.tsx  LLMSetupPage.tsx  LoginForm.tsx  RegisterForm.tsx  config-dialog.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-chat-stream.ts
frontend/src/lib/: api.ts  types.ts
src/ai/flows/: configure-llm-flow.ts  generate-ai-response.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: config-dialog.tsx
